k8s/ai-services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-services-ingress
  namespace: ai-services
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "55m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ingestion(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingestion
                port:
                  number: 8000
          - path: /chat(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat
                port:
                  number: 8000
          - path: /debug(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: debug
                port:
                  number: 8000
